# automation

./: .gitignore  pyproject.toml
automation/: __init__.py  get_suggest_keyword.py  throttle_twitter_search.py
notebooks/: analysis_tweet.ipynb  google_search_keywords.ipynb  twitter.ipynb
tests/: test_automation.py
